feat: product + inventory + otp + roles (#5)