@@ -3,10 +3,11 @@ package br.com.fiap.pos.tech_challenge.core.security;
 import br.com.fiap.pos.tech_challenge.core.domain.User;
 import org.jspecify.annotations.NullMarked;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 @NullMarked
 public class UserDetailsImpl extends User implements UserDetails {
@@ -17,7 +18,10 @@ public class UserDetailsImpl extends User implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList();
+        if (getRole() == null) {
+            return List.of();
+        }
+        return List.of(new SimpleGrantedAuthority("ROLE_" + getRole().name()));
     }
 
     @Override
